--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <title>Commenting_system</title>
 </head>
 <body>
-    
+    <hr>
+    <div>
+        <div>
+            <p></p>
+        </div>
+        <div>
+            <label for="sorting"></label>
+            <select name="sorting" id="sorting-select">
+                <option value="date">По дате</option>
+                <option value="number_of_ratings">По количеству оценок</option>
+                <option value="activity">По актуальности</option>
+                <option value="number_of_responses">По количеству ответов</option>
+            </select>
+        </div>
+        <div>
+            <p></p>
+        </div>
+    </div>
 </body>
 </html>
