--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <hr>
     <div>
         <div>
-            <p></p>
+            <p>Комментарии</p>
         </div>
         <div>
             <label for="sorting"></label>
@@ -22,8 +22,12 @@
             </select>
         </div>
         <div>
-            <p></p>
+            <p>Избранное</p>
         </div>
+    </div>
+    <div>
+        <input type="text" maxlength="1000">
+        <button>Отправить</button>
     </div>
 </body>
 </html>
