--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
     <title>Commenting_system</title>
 </head>
 <body>
@@ -26,8 +26,18 @@
         </div>
     </div>
     <div>
-        <input type="text" maxlength="1000">
-        <button>Отправить</button>
+        <img src="Cat.jpeg" alt="Кот">
+        <div>
+            <div>
+                <p>Пользователь</p>
+                <p>Макс. 1000 символов</p>
+            </div>
+            <div>
+                <input type="text" maxlength="1000" placeholder="Введите текст сообщения...">
+                <button>Отправить</button>
+            </div>
+        </div>
+        
     </div>
 </body>
 </html>
