--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
             </div>            
         </div>
         <div class="block-comment">
-            <!--
+            <!--    
             <div class="comment">
                 <img src="Cat.jpeg" alt="Кот">
-                <div>
+                <div class="main-box">
                     <div class="block-nickname-date">
                         <p class="name">Пользователь</p>
-                        <p class="number-characters">Дата</p>
+                        <p class="data">Дата</p>
                     </div>
                     <div class="text-comment-block">
                         <p class="text-comment">Самое обидное когда сценарий по сути есть - в виде книг, где нет сюжетных дыр, всё логично, стройное повествование и достаточно взять и экранизировать оригинал как это было в первых фильмах с минимальным количеством отсебятины и зритель с восторгом примет любой такой фильм и сериал, однако вместо этого 'Кольца власти' просто позаимствовали имена из оригинала, куски истории, мало связанные между собой и выдали очередной среднячковый сериал на один раз в лучшем случае.</p>
@@ -59,10 +59,10 @@
             </div>
             <div class="response-to-a-comment">
                 <img src="Cat.jpeg" alt="Кот">
-                <div>
+                <div class="main-box">
                     <div class="block-nickname-date">
                         <p class="name">Пользователь</p>
-                        <p class="number-characters">Дата</p>
+                        <p class="data">Дата</p>
                     </div>
                     <div class="text-comment-block">
                         <p class="text-response-comment">Самое обидное когда сценарий по сути есть - в виде книг, где нет сюжетных дыр, всё логично, стройное повествование и достаточно взять и экранизировать оригинал как это было в первых фильмах с минимальным количеством отсебятины и зритель с восторгом примет любой такой фильм и сериал, однако вместо этого 'Кольца власти' просто позаимствовали имена из оригинала, куски истории, мало связанные между собой и выдали очередной среднячковый сериал на один раз в лучшем случае.</p>
