--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="block-filling">
-            <img src="Cat.jpeg" alt="Кот">
+            <img src="https://loremflickr.com/320/240" alt="Кот">
             <div>
                 <div class="block-nickname">
                     <p class="name">Пользователь</p>
