--- a/index.html
+++ b/index.html
@@ -53,26 +53,24 @@
                             <button id="btn-answer"  class="btn-answer">Ответить</button>
                             <button id="btn-favorites" class="btn-favorites">❤ В избранном</button>
                         </div>
-                    </div>
-                </div> 
-            </div>
-            <!--
-            <div class="response-to-a-comment">
-                <img src="Cat.jpeg" alt="Кот">
-                <div class="main-box">
-                    <div class="block-nickname-date">
-                        <p class="name">Пользователь</p>
-                        <p class="data">Дата</p>
-                    </div>
-                    <div class="text-comment-block">
-                        <p class="text-response-comment">Самое обидное когда сценарий по сути есть - в виде книг, где нет сюжетных дыр, всё логично, стройное повествование и достаточно взять и экранизировать оригинал как это было в первых фильмах с минимальным количеством отсебятины и зритель с восторгом примет любой такой фильм и сериал, однако вместо этого 'Кольца власти' просто позаимствовали имена из оригинала, куски истории, мало связанные между собой и выдали очередной среднячковый сериал на один раз в лучшем случае.</p>
-                        <div class="block-comment-btn">
-                            <button class="btn-favorites">❤ В избранном</button>
+                    </div> 
+                </div>
+                <div class="response-to-a-comment">
+                    <img src="https://loremflickr.com/320/240" alt="Кот">
+                    <div class="main-box">
+                        <div class="block-nickname-date">
+                            <p class="name">Пользователь</p>
+                            <p class="data">Дата</p>
                         </div>
-                    </div>
-                </div> 
-            </div>-->
-        </div>
+                        <div class="text-comment-block">
+                            <p class="text-response-comment">Самое обидное когда сценарий по сути есть - в виде книг, где нет сюжетных дыр, всё логично, стройное повествование и достаточно взять и экранизировать оригинал как это было в первых фильмах с минимальным количеством отсебятины и зритель с восторгом примет любой такой фильм и сериал, однако вместо этого 'Кольца власти' просто позаимствовали имена из оригинала, куски истории, мало связанные между собой и выдали очередной среднячковый сериал на один раз в лучшем случае.</p>
+                            <div class="block-comment-btn">
+                                <button id="btn-favorites" class="btn-favorites">❤ В избранном</button>
+                            </div>
+                        </div>
+                    </div> 
+                </div>
+            </div>
     </section>
 </body>
 </html>
