изменение размера дисплея

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div>
                 <div class="block-nickname">
                     <p class="name">Пользователь</p>
-                    <div style="display: flex; align-items: center; gap: 10px;">
+                    <div class="counter-block">
                         <output class="number-characters">0/1000</output>
                         <p id="number-characters" class="number-characters" style="display: none;">Слишком длинное сообщение</p>
                     </div>
@@ -42,7 +42,7 @@
                 </div>
             </div>            
         </div>
-        <div id="block-comment" class="block-comment">
+       <div id="block-comment" class="block-comment">
             <div class="comment">
                 <img src="https://loremflickr.com/320/240" alt="Кот">
                 <div class="main-box">
@@ -58,7 +58,7 @@
                         </div>
                     </div> 
                 </div>
-                <div class="response-to-a-comment">
+            <!--<div class="response-to-a-comment">
                     <img src="https://loremflickr.com/320/240" alt="Кот">
                     <div class="main-box">
                         <div class="block-nickname-date">
@@ -71,7 +71,8 @@
                                 <button id="btn-favorites" class="btn-favorites">❤ В избранном</button>
                             </div>
                         </div>
-                    </div> 
+                    </div>
+                </div> -->
             </div>
         </div>
     </section>
