--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>            
         </div>
        <div id="block-comment" class="block-comment">
-            <div class="comment">
+            <!--<div class="comment">
                 <img src="https://loremflickr.com/320/240" alt="Кот">
                 <div class="main-box">
                     <div class="block-nickname-date">
@@ -58,7 +58,7 @@
                         </div>
                     </div> 
                 </div>
-            <!--<div class="response-to-a-comment">
+            <div class="response-to-a-comment">
                     <img src="https://loremflickr.com/320/240" alt="Кот">
                     <div class="main-box">
                         <div class="block-nickname-date">
@@ -72,8 +72,8 @@
                             </div>
                         </div>
                     </div>
-                </div> -->
-            </div>
+                </div> 
+            </div>-->
         </div>
     </section>
 </body>
